examples/invalid/syntax/invalid_extern_abi.aru
module examples.invalid.syntax.invalidExternAbi

// expected: syntax error; extern ABI must be a quoted ABI literal.
extern C {
    func puts(text ptr[u8]) int
}
